finished quiz app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Quiz App</string>
+    <string name="main_score">Score = </string>
+    <string name="main_20result">The title of \'chem god\' does not even deserve you. You have transcended beyond the chemistry knowledge and expertise even of that of a god. All chemistry teachers will forever bow at your feet.</string>
+    <string name="main_1519result">You know, you’re not too bad. If you are Asian, your family will probably disown you. However, compared to the general population, you’re still above average. But because you want to get better at chemistry and nail that perfect 20/20, you should join chemistry club. Instagram: @sphs.chemistry.</string>
+    <string name="main_1014result">You’re likely one of the kids that are currently failing AP Chem and need tutoring help. You can probably do better than this, but at least you’re above average. Although chemistry club is anything but average, we suppose that we can accept you. DM one of the officers to join.</string>
+    <string name="main_59result">You did not even reach 50%! That’s not even half correct! If you got 50% on a test at school, you would probably be making your own dinner. If you had 50% of the money in your bank account, you would have 0 dollars. If you missed 50% of the shots you took, you would likely be single forever. Chemistry club is ashamed to be in your presence.</string>
+    <string name="main_04result">You either never learned any chemistry or completely failed chemistry. If it’s the latter, please feel free by all means to be as embarrassed as possible. Absolutely shameful. Disgusting. Raw. Unseasoned. Chemistry club will never accept you. You are more of a joke than our memes.</string>
 </resources>
